[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/graphics/ui/icons/conditions/attack_up.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/ui/icons/conditions/defence_down.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/ui/icons/conditions/attack_down.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/icons/conditions/defence_up.png" type="Texture" id=4]
[ext_resource path="res://src/ui/ConditionIcons.gd" type="Script" id=5]

[node name="ConditionIcons" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackUp" type="Sprite" parent="."]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="AttackDown" type="Sprite" parent="."]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="DefenceUp" type="Sprite" parent="."]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="DefenceDown" type="Sprite" parent="."]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
